--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,12 @@ a {
     padding: 10px;
 }
 
-a:hover {
+
+/* a:hover {
     background-color: white;
     color: black;
     height: 100%;
-}
+} */
 
 .portfolio-img {
     width: 75%;
@@ -204,8 +205,7 @@ main #portfolio ul li {
 footer {
     background-color: black;
     text-align: center;
-    height: 50px;
-
+    height: auto;
     width: 100%;
 }
 
