--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ main #about-me {
 
 .portfolio-button {
     width: 45%;
-    padding: 15px;
+    padding: 15px 5px;
     border: 1px solid grey;
     background-color: #50CDDF;
     border-radius: 15px;
