--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ a {
     padding: 10px;
 }
 
+h1 {
+    color: white;
+    text-shadow: grey 0px 0px 10px;
+}
+
 
 /* a:hover {
     background-color: white;
@@ -69,6 +74,7 @@ nav {
 h2 {
     margin: 0;
     color: white;
+    text-shadow: grey 0px 0px 10px;
     font-size: x-large;
     padding-top: 25px;
 }
@@ -141,11 +147,14 @@ main #about-me {
 }
 
 .portfolio-button {
+    display: inline-block;
     width: 45%;
+    font-size: larger;
     padding: 15px 5px;
     border: 1px solid grey;
     background-color: #50CDDF;
     border-radius: 15px;
+    text-shadow: grey 0px 0px 10px;
     color: white;
     text-decoration: none;
     cursor: pointer;
