--- a/styles.css
+++ b/styles.css
@@ -200,9 +200,10 @@ main #portfolio ul li {
     /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 
-/* .portfolio-head-text {
-    color: black;
-} */
+#portfolio-header {
+    color: white;
+    text-shadow: black 0px 0px 10px;
+}
 
 .content {
     border: 1px black solid;
